Add item# class on creation of new list__item

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       </div>
 
       <div id="list" class="list">
-        <div class="template">
-          <div id="list__item" class="list__item">
+
+          <div id="list__item" class="list__item item0 template">
             <div class="item__content">
               <p>placecontenthere</p>
             </div>
@@ -53,12 +53,12 @@
               <button class="button button--edit" type="button" name="button">
                 <i class="far fa-edit"></i>
               </button>
-              <button id="button--remove" class="button button--remove" type="button" name="button">
+              <button class="button button--remove" type="button" name="remove0">
                 <i class="far fa-times-circle"></i>
               </button>
             </div>
           </div>
-        </div>
+
       </div>
 
     </div>
