--- a/index.html
+++ b/index.html
@@ -45,23 +45,22 @@
 
       <div id="list" class="list">
 
-          <div id="list__item" class="list__item item0 template">
-            <div class="item__content">
-              <p>placecontenthere</p>
-            </div>
-            <div class="item__buttons">
-              <button class="button button--edit" type="button" name="button">
-                <i class="far fa-edit"></i>
-              </button>
-              <button class="button button--remove" type="button" name="remove0">
-                <i class="far fa-times-circle"></i>
-              </button>
-            </div>
+        <div id="list__item" class="list__item template">
+          <div class="item__content">
+            <p>placecontenthere</p>
           </div>
+          <div class="item__buttons">
+            <button class="button button--edit" type="button" name="button">
+              <i class="far fa-edit"></i>
+            </button>
+            <button id="remove1" class="button button--remove" type="button">
+              <i class="far fa-times-circle"></i>
+            </button>
+          </div>
+        </div>
 
-      </div>
-
-    </div>
+      </div> <!-- #list close -->
+    </div> <!-- .container close -->
 
   </body>
 
