Add styling for list item buttons

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 
     <div class="container">
       <!-- Uncompleted taks -->
-      <ul class="todo">
+      <ul id="completed" class="todo">
         <li>
           This is an item
           <div class="todo__buttons">
-            <button>
-
+            <button class="buttons__remove">
+              <i class="far fa-trash-alt"></i>
             </button>
-            <button>
-
+            <button class="buttons__complete">
+              <i class="fas fa-check"></i>
             </button>
           </div>
         </li>
