Add delete list item functionality

--- a/index.html
+++ b/index.html
@@ -30,24 +30,10 @@
 
     <div class="container">
       <!-- Uncompleted taks -->
-      <ul id="completed" class="todo">
-        <li>
-          This is an item
-          <div class="todo__buttons">
-            <button class="buttons__remove">
-              <i class="far fa-trash-alt"></i>
-            </button>
-            <button class="buttons__complete">
-              <i class="fas fa-check"></i>
-            </button>
-          </div>
-        </li>
-      </ul>
+      <ul class="todo" id="todo"></ul>
 
       <!-- Completed tasks -->
-      <!-- <ul class="todo">
-
-      </ul> -->
+      <ul class="todo" id="completed"></ul>
     </div>
 
 
