--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
   <body>
 
     <header class="header">
+
       <input id="item" class="header__input" type="text" placeholder="New item..">
       <button id="add" class="header__button">
         <i class="fa fa-plus"></i>
+      </button>
+      <button id="menu" class="header__menu">
+        <i class="fas fa-bars"></i>
       </button>
     </header>
 
