Add transparent cover over exposed list content while menu is out

--- a/index.html
+++ b/index.html
@@ -44,15 +44,23 @@
 
     <div class="menu-panel">
 
-      <div class="menu">
-        <input id="categorie" class="menu__input" type="text" placeholder="New list..">
-        <button id="cat-add" class="button button--listAdd">
-          <i class="fa fa-plus"></i>
-        </button>
-        <button class="button button--listMenu">
-          <i class="fas fa-bars"></i>
-        </button>
+      <div class="panel__cover">
+
       </div>
+
+      <div class="panel__content">
+        <div class="menu">
+          <input id="categorie" class="menu__input" type="text" placeholder="New list..">
+          <button id="cat-add" class="button button--listAdd">
+            <i class="fa fa-plus"></i>
+          </button>
+          <button class="button button--listMenu">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+      </div>
+
+
 
 
     </div>
