--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
             <i class="fas fa-bars"></i>
           </button>
         </div>
+
+        <div class="container">
+          <ul class="list" id="list"></ul>
+        </div>
       </div>
-
-
 
 
     </div>
