--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
           <button class="button button--listMenu">
             <i class="fas fa-bars"></i>
           </button>
+          <div class="alert">
+            <span class="alert__text">Please create a list!</span>
+          </div>
         </div>
 
         <div class="container">
