Change alert list alert and add active alert

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     <div class="menu-panel">
 
       <div class="panel__cover">
-
+        <div class="alert alert--active">
+          <span class="alert__text">Please select a list!</span>
+        </div>
       </div>
 
       <div class="panel__content">
@@ -57,7 +59,7 @@
           <button class="button button--listMenu">
             <i class="fas fa-bars"></i>
           </button>
-          <div class="alert">
+          <div class="alert alert--list">
             <span class="alert__text">Please create a list!</span>
           </div>
         </div>
