--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <div class="list-panel">
 
       <header class="header">
+        <div class="header__title">
+          <span class="title__text"></span>
+        </div>
         <input id="item" class="header__input" type="text" placeholder="New item..">
         <button id="add" class="button button--itemAdd">
           <i class="fa fa-plus"></i>
