App 'name' present in menu

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 
       <div class="panel__content">
         <div class="menu">
+          <div class="menu__title">
+            <span class="title__text text--menu">Checklist</span>
+          </div>
           <input id="categorie" class="menu__input" type="text" placeholder="New list..">
           <button id="cat-add" class="button button--listAdd">
             <i class="fa fa-plus"></i>
